fix: increase z-index for header to improve stacking context

--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -7,7 +7,7 @@
     height: 4.5rem;
     padding: 0.5rem;
     gap: 0.5rem;
-    z-index: 1;
+    z-index: 2;
     background-color: var(--color-bg-primary-translucent);
     backdrop-filter: blur(0.5rem);
 
